--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dynamic = ["version", "description"]
-scripts = { suguru = "suguru.game" }
+scripts = { suguru = "suguru.game:main" }
 [project.urls]
 Home = "https://github.com/gabay/suguru"
 "Bug Tracker" = "https://github.com/gabay/suguru/issues"
